--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ apscheduler==3.7.0
 pytz==2021.1
 discord.py==1.6.0
 pymongo==3.11.3
+MongoFrames==1.3.6
 dnspython==2.1.0
 aiohttp==3.7.4
 botbuilder-discord==0.5.0
